--- a/basiclayout/src/main/AndroidManifest.xml
+++ b/basiclayout/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeUI">
         <activity
-            android:name=".MainActivity"
+            android:name=".BasicLayoutMainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComposeUI">
