--- a/jetsurvey/src/main/AndroidManifest.xml
+++ b/jetsurvey/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:name=".JetSurveyMainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ComposeUI">
+            android:theme="@style/Theme.AppCompatUI">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
